<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    tools:context=".ui.auth.RegisterActivity">

    <TextView
        android:id="@+id/logo"
        style="@style/logo_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/mbadok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_username"
        style="@style/style_tv_input"
        android:layout_marginStart="24dp"
        android:text="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/et_username"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_username"
        style="@style/style_input_text"
        android:layout_marginStart="24dp"
        android:layout_marginTop="128dp"
        android:hint="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/tv_email"
        style="@style/style_tv_input"
        android:layout_marginStart="24dp"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="parent" />

    <com.fauzancode.capstoneapp.view.CustomEmailEditText
        android:id="@+id/et_email"
        style="@style/style_input_text"
        android:layout_marginTop="48dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />

    <TextView
        android:id="@+id/tv_password"
        style="@style/style_tv_input"
        android:layout_marginStart="24dp"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="parent" />

    <com.fauzancode.capstoneapp.view.CustomPassEditText
        android:id="@+id/et_password"
        style="@style/style_input_text"
        android:layout_marginTop="48dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <TextView
        android:id="@+id/tv_verify_password"
        style="@style/style_tv_input"
        android:layout_marginStart="24dp"
        android:text="@string/verify_password"
        app:layout_constraintBottom_toTopOf="@+id/et_verify_pass"
        app:layout_constraintStart_toStartOf="parent" />

    <com.fauzancode.capstoneapp.view.CustomPassEditText
        android:id="@+id/et_verify_pass"
        style="@style/style_input_text"
        android:layout_marginTop="48dp"
        android:hint="@string/verify_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <Button
        android:id="@+id/btn_signup"
        style="@style/style_btn_primary"
        android:layout_marginBottom="24dp"
        android:text="@string/daftar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>