<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.auth.RegisterAddPhotoActivity">

    <TextView
        android:id="@+id/tv_photo"
        style="@style/heading"
        android:layout_marginTop="32dp"
        android:text="Upload Photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:fontFamily="sans-serif"
        android:text="@string/tv_welcome"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/profile_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hello" />

    <Button
        android:id="@+id/btn_lewati"
        style="@style/style_btn_primary"
        android:layout_marginBottom="48dp"
        android:text="@string/skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_simpan"
        style="@style/style_btn_primary"
        android:layout_marginBottom="16dp"
        android:text="@string/save_and_continue"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btn_lewati"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_editFoto"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/yellow"
        android:forceDarkAllowed="false"
        android:src="@drawable/ic_add"
        app:fabCustomSize="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
        app:layout_constraintEnd_toEndOf="@+id/circleImageView"
        app:tint="@null" />

</androidx.constraintlayout.widget.ConstraintLayout>